# prehook

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/: main.rs
src/prehook/: __init__.py  __main__.py  cli.py  hook.sh
tests/: integration.rs  test_prehook.py
