[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "precommit"
version = "0.1.0"
description = "Run commands before every commit, configured in pyproject.toml"
readme = "README.md"
authors = [{ name = "Christian Tanul", email = "git@christiantanul.com" }]
requires-python = ">=3.10"
license = "MIT"

[tool.maturin]
bindings = "bin"
