[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prehook"
version = "0.5.0"
description = "Run git hooks as shell commands from pyproject.toml"
readme = "README.md"
authors = [{ name = "Christian Tanul", email = "git@christiantanul.com" }]
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["git", "hooks", "pre-commit", "linter", "formatter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Repository = "https://github.com/scriptogre/prehook"

[project.scripts]
prehook = "prehook.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/prehook"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.prehook]
hooks = [
    { name = "lint", run = "uvx ruff check" },
    { name = "format", run = "uvx ruff format --check" },
    { name = "test", run = "uv run pytest -q" },
]
